# finops

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  state.rs
src/domain/: account.rs  budget.rs  expense.rs  mod.rs  summary.rs
src/routes/: handlers.rs  mod.rs
src/services/: analytics.rs
tests/: api.rs
